1) Refactor Trees for simple readability 2) Add LRUCache and SimpleCache examples 3) Some array practice

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ repositories {
 apply plugin: 'java'
 
 dependencies {
+    compile group: 'com.google.collections', name: 'google-collections', version: '1.0-rc2'
+
     testCompile('junit:junit:4.12'){
         exclude group: 'org.hamcrest'
     }
